@@ -1,5 +1,11 @@
 2005-01-26 Peter Bienstman  <Peter.Bienstman@UGent.be>
 
+	* generalslab.cpp: Add support for mirrored slab detection.
+	* generalslab.h: Ditto.
+	* slabmatrixcache.cpp: Ditto.
+
+2005-01-26 Peter Bienstman  <Peter.Bienstman@UGent.be>
+
 	* slab.cpp: Improve detection of same materials.
 
 2004-08-18 Peter Bienstman  <Peter.Bienstman@UGent.be>
